[package]
name = "stm32f411_4_wire_spi"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "1.0.0"
lt7683 = { path = "../../" }

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f411"]

[profile.dev]
panic="abort"
opt-level=2

[[bin]]
name = "stm32f411_4_wire_spi"
path = "src/main.rs"
test = false
bench = false
